# dd-llm

./: README.md  pyproject.toml
cookbook/basic-llm-call/: README.md  main.py
cookbook/cost-tracking/: README.md  main.py  requirements.txt
cookbook/custom-provider/: README.md  main.py  requirements.txt
cookbook/multi-turn-chat/: README.md  main.py
cookbook/provider-fallback/: README.md  main.py
cookbook/structured-output/: README.md  main.py
dd_llm/: __init__.py  _builtins.py  base.py  provider.py  registry.py
dd_llm/adapters/: __init__.py  anthropic_sdk.py  claude_cli.py  gemini_sdk.py  openai_sdk.py
tests/: test_base.py  test_claude_cli.py  test_provider.py  test_registry.py
